@@ -21,6 +21,7 @@
   --enable-fpu \
   --enable-sse=4 \
   --enable-sse-extension \
+  --enable-mialigned-sse \
   --enable-vme \
   --enable-sep \
   --enable-3dnow \
